--- a/Temperature Prediction in Farh.ipynb
+++ b/Temperature Prediction in Farh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "set_url=\"http://academic.udayton.edu/kissock/http/Weather/gsod95-current/INCALCUT.txt\"\n",
     "file_Data = []\n",
-    "import urllib.request\n"
+    "import urllib.request"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegression()"
+    "model = LinearRegression() #RNN use, LSTM, TimeSeriesAnalysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,25 +116,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = np.array([4,25]).reshape(1,-1)    #[month,day]"
+    "test = np.array([4,26]).reshape(1,-1)    #[month,day]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = model.predict(X_test)"
+    "prediction = model.predict(X_test)\n",
+    "y_test = np.array(y_test).reshape(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[69. ],\n",
+       "       [81.3],\n",
+       "       [73.7],\n",
+       "       ...,\n",
+       "       [82.7],\n",
+       "       [75.7],\n",
+       "       [82.8]])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[77.69075186],\n",
+       "       [78.59627373],\n",
+       "       [78.63280707],\n",
+       "       ...,\n",
+       "       [78.49201177],\n",
+       "       [78.55112132],\n",
+       "       [78.73706904]])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test\n",
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,30 +206,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[85.56066754]])"
+       "7.624858413741629"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6.477886618288949"
+      ]
+     },
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(test)+errormean"
+    "test_res = ((model.predict(test)+errormean)-32)*5/9\n",
+    "errormean\n",
+    "errormedian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[29.73532631]])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HOTTTT!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if(test_res>25):\n",
+    "    print(\"HOTTTT!!!\")\n",
+    "elif(test_res<10):\n",
+    "    print(\"COLD!!!\")\n",
+    "else:\n",
+    "    print(\"It's okay!\")"
+   ]
   }
  ],
  "metadata": {
